export const testIds = {
  loginEmailInput: 'loginEmailInput',
  loginPasswordInput: 'loginPasswordInput',
  registrationIdInput: 'registrationIdInput',
  navigationBackButton: 'navigationBackButton',
  dashboardUserName: 'dashboardUserName',
};
